--- a/hack-project.jsonc
+++ b/hack-project.jsonc
@@ -4,7 +4,7 @@
     // descripción de una frase y directa al grano de la solución
     "oneliner": "Inmortaliza los recuerdos de tus seres queridos con IA",
     // url al logo de proyecto. mínimo 200x200, png. puede estar hosteado en el mismo repo.
-    "logo_url": "https://github.com/platanus-hack/team-24/blob/main/logo.png",
+    "logo_url": "https://raw.githubusercontent.com/platanus-hack/team-24/refs/heads/main/Heredame-Logo.png",
     // url para acceder a su app. si es apk u otro, link de descarga directa.
     "app_url": "https://hi.hereda.me"
 }
